--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@ compatibility_date = "2023-05-26"
 
 [vars]
 # UUID = "2cd61524-9843-43ab-8a0a-df4a744bb859"
-# PROXYIP = "1.2.3.4"
+# PROXYIP = "https://8.8.8.8/dns-query"
 # DNS_RESOLVER_URL = "https://cloudflare-dns.com/dns-query"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
